Feat: 인터페이스 기반 프록시 구현

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 	mavenCentral()
 }
 
+springBoot {
+	mainClass = "me.chulgil.spring.proxy.ProxyApplication"
+}
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
