--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+<properties>=
+    <!-- The main class to start by executing java -jar -->
+    <start-class>me.chulgil.spring.proxy.ProxyApplication</start-class>
+</properties>
