--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-<properties>=
-    <!-- The main class to start by executing java -jar -->
-    <start-class>me.chulgil.spring.proxy.ProxyApplication</start-class>
-</properties>
+spring.main.allow-circular-references=true
